manifests/petstoreorderservice-deployment-everything-enabled.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-petstoreorderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-petstoreorderservice
  template:
    metadata:
      labels:
        app: aks-petstoreorderservice
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: petstoreorderservice
          image: kgdev.azurecr.io/petstoreorderservice:latest
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 2Gi
          ports:
            - containerPort: 8080
